Bug 447367 - When right-clicking the brush parameters, there is a high probability of being directly locked
Summary: When right-clicking the brush parameters, there is a high probability of bein...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.0.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2021-12-22 03:59 UTC by thetwo
Modified: 2022-05-07 02:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Flashing problem gif cannot be recorded (156.42 KB, image/gif)
2021-12-22 03:59 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2021-12-22 03:59:16 UTC
Created attachment 144775 [details]
Flashing problem gif cannot be recorded

SUMMARY

When krita produced pop-up interfaces (brush interface, pop-up window to close the document, etc.), I found that the outer edge projection flickered very seriously.
The most serious impact is the pop-up interface. Right-click has a certain probability to directly lock the brush parameters.
I asked a friend who used the 5.1 beta, and he said that this problem still exists
Comment 1 Halla Rempt 2022-01-05 12:59:48 UTC
I've tried to reproduce something like this on Windows, even with the language set to Chinese, and I don't see any flickering. I'm also not sure what I am supposed to be seeing in the video...
Comment 2 thetwo 2022-01-05 13:24:02 UTC
(In reply to Halla Rempt from comment #1)
> I've tried to reproduce something like this on Windows, even with the
> language set to Chinese, and I don't see any flickering. I'm also not sure
> what I am supposed to be seeing in the video...

I just tested on 5.0 and found that it no longer flickers.
But the right-click brush parameters still have a high probability of being directly locked.
Comment 3 Halla Rempt 2022-01-05 13:56:30 UTC
Git commit 5d69def33eabf74f748cb6221905cf5cee20ff2d by Halla Rempt.
Committed on 05/01/2022 at 13:56.
Pushed by rempt into branch 'master'.

Add a section on top of the lock/unlock menu

This prevents accidental clicks.

M  +9    -2    libs/ui/widgets/kis_categorized_list_view.cpp

https://invent.kde.org/graphics/krita/commit/5d69def33eabf74f748cb6221905cf5cee20ff2d
Comment 4 Halla Rempt 2022-01-05 13:56:54 UTC
Git commit c64b1022e66afe1a8f20bc54307016a803035705 by Halla Rempt.
Committed on 05/01/2022 at 13:56.
Pushed by rempt into branch 'krita/5.0'.

Add a section on top of the lock/unlock menu

This prevents accidental clicks.
(cherry picked from commit 76243e7a2c3f734c64a600e804a521b5cbe27484)

M  +9    -2    libs/ui/widgets/kis_categorized_list_view.cpp

https://invent.kde.org/graphics/krita/commit/c64b1022e66afe1a8f20bc54307016a803035705
Comment 5 thetwo 2022-01-14 07:56:17 UTC
(In reply to Halla Rempt from comment #4)
> Git commit c64b1022e66afe1a8f20bc54307016a803035705 by Halla Rempt.
> Committed on 05/01/2022 at 13:56.
> Pushed by rempt into branch 'krita/5.0'.
> 
> Add a section on top of the lock/unlock menu
> 
> This prevents accidental clicks.
> (cherry picked from commit 76243e7a2c3f734c64a600e804a521b5cbe27484)
> 
> M  +9    -2    libs/ui/widgets/kis_categorized_list_view.cpp
> 
> https://invent.kde.org/graphics/krita/commit/
> c64b1022e66afe1a8f20bc54307016a803035705

Was it merged in 5.0.2? I still have exceptions. It's like double-clicking when the mouse is clicked (I set shortcut keys for the keyboard, not the mouse's fault) or is it a windows11 bug?
Comment 6 thetwo 2022-05-07 02:22:05 UTC
I no longer encounter this bug in 5.0.6 and the latest nightly version. So I think this topic can be closed.