Add a section on top of the lock/unlock menu

This prevents accidental clicks.

BUG:447367